# Hokkoku_bank_teamA_demo_koen

./: .env.example  .gitignore  DEPLOYING.md  DEPLOYMENT.md  Dockerfile  HANDOVER.md  Makefile  README-Docker.md  README.md  docker-compose.yml  nginx-single.conf  render.yaml  sample_employees.csv  supervisord.conf  tatus
docs/: chat_micro_adjustments_architecture.md  existing_implementation_analysis.md  llm_chat_processing_flow.md  session_summary_llm_integration.md  shift_micro_adjustment_implementation_plan.md  shift_micro_adjustment_llm_architecture.md  shift_micro_adjustment_llm_requirements.md
hokkoku_backend/: Dockerfile  fly.toml  pyproject.toml
hokkoku_backend/app/: config.py  data.db  main.py  schemas.py  store.py
hokkoku_backend/app/routers/: adjustments.py  adjustments_ws.py  chat.py  constraints.py  llm.py
hokkoku_backend/app/services/: adjustments.py  diff.py  intent.py  openai_client.py  validation.py
hokkoku_backend/app/static/: app.js  index.html
hokkoku_backend/tests/: test_llm_api.py  test_services.py
hokkoku_frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
linebot_service/: Dockerfile  README.md  pyproject.toml
linebot_service/app/: __init__.py  config.py  main.py
requirements/: 01_functional_requirements.md  02_non_functional_requirements.md  03_technical_architecture.md  04_ui_ux_specifications.md  05_project_management.md  06_business_requirements.md  07_development_team_roles.md  08_llm_interface_requirements.md  README.md
session-20250815/: ADOPTED_REJECTED.md  (+6 more)
(+18 files in other folders)
