[tool.poetry]
name = "linebot_service"
version = "0.1.0"
description = "Standalone LINE Messaging API bot service (FastAPI)"
authors = ["Team A <dev@hokkoku-bank.local>"]
readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.116.1", extras = ["standard"] }
uvicorn = "^0.35.0"
line-bot-sdk = "^3.0.0"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


